--- a/AsiaLabv1/Web.config
+++ b/AsiaLabv1/Web.config
@@ -9,20 +9,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    
-   <!-- <add name="AsiaLabdb2Entities" connectionString="metadata=res://*/AsiaLabData.csdl|res://*/AsiaLabData.ssdl|res://*/AsiaLabData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <!--<add name="AsiaLabDbEntities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\AsiaLabDb.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>-->
-   <!-- <add name="AsiaLabDbEntities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-	<!--<add name="AsiaLabDb3Entities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-	
+    <!-- <add name="AsiaLabdb2Entities" connectionString="metadata=res://*/AsiaLabData.csdl|res://*/AsiaLabData.ssdl|res://*/AsiaLabData.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="AsiaLabDbEntities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\AsiaLabDb.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>-->
+    <!-- <add name="AsiaLabDbEntities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="AsiaLabDb3Entities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--Azure Wali Connection String-->
-    <add name="AsiaLabDbEntities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    
     <!--Local Wali-->
     <!--<add name="AsiaLabDbEntities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\AsiaLabdb2.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  
-	</connectionStrings>
-  
+    <!--<add name="AsiaLabDbEntities" connectionString="metadata=res://*/AsiaLabDb.csdl|res://*/AsiaLabDb.ssdl|res://*/AsiaLabDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=tcp:asialab.database.windows.net,1433;Database=AsiaLabDb;User ID=asialab@asialab;Password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="AsiaLabDbEntities1" connectionString="metadata=res://*/AsiaLabDb3.csdl|res://*/AsiaLabDb3.ssdl|res://*/AsiaLabDb3.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=tcp:asialab.database.windows.net;initial catalog=AsiaLabDb;user id=asialab@asialab;password=Asia+Lab2016;Encrypt=True;TrustServerCertificate=False;Connection timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -106,6 +102,12 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
